[CSS] Stop clipping

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1484,7 +1484,7 @@ a {
 
     /* Tables */
     table td {
-        max-width: 80px;
+        max-width: 130px;
     }
 
     table td a {
